--- a/primer_evaluation.Rmd
+++ b/primer_evaluation.Rmd
@@ -815,6 +815,7 @@ id_success <- joint %>%
 model_dat <- id_success %>%
   dplyr::select(combos, amplicon, threshold, success)
 
+library(chngpt)
 breakpoint_fit <- model_dat %>% 
   group_by(threshold) %>%
   nest() %>%
@@ -822,28 +823,57 @@ breakpoint_fit <- model_dat %>%
                                    type="segmented", family="gaussian",data = .)),
          summary = map(fits, summary),
          preds = map2(fits, data, predict),
-         breakpoint = map(fits, "chngpt")
-    ) 
+         breakpoint = map(fits, "chngpt"),
+         coef_info = map(summary,function(x){ as_tibble(x$coefficients, rownames="term" )}),
+         )
+  
+
+
+slope_coefs <- breakpoint_fit %>%
+  unnest(coef_info) %>%
+  dplyr::select(threshold,term, est, std_err = `Std. Error*`,
+                lower = `(lower`, upper = `upper)`,
+                pval = `p.value*`, -where(is.list)) %>%
+  mutate(
+    term = case_when(
+    term == "(Intercept)" ~  "intercept",
+    term == "amplicon" ~  "slope",
+    term == "(amplicon-chngpt)+" ~ "post_slope"
+    )) %>%
+  mutate(signif = pval < 0.05) 
+
 
 dat_pred <- breakpoint_fit %>%
   unnest(preds, data, breakpoint)%>%
   select(-where(is.list))  %>%
-  drop_na()
+  drop_na() %>%
+  left_join(slope_coefs %>%
+              select(threshold, term, signif, est) %>%
+              pivot_wider(names_from=term, values_from=c(signif, est))) 
+
 
 break_annot <- dat_pred %>% 
-                group_by(threshold) %>%
-                filter(amplicon == breakpoint) %>%
-                dplyr::slice(1)
+  group_by(threshold) %>%
+  filter(amplicon == breakpoint) %>%
+  dplyr::slice(1) %>%
+  select(-combos) %>%
+  left_join(slope_coefs %>%
+              filter(term == "post_slope") %>%
+              select(threshold, pval, signif))
+
 
 gg.id <- id_success %>%
+  mutate(type = type %>% str_replace("all", "All Insects") %>% str_replace("pest", "Pest Insects")) %>%
   ggplot(aes(x=amplicon, y=success, colour=success))+
   geom_jitter(width = 5, height=0.01, alpha=0.5)+
    geom_line(data=dat_pred[dat_pred$amplicon < dat_pred$breakpoint,],
              aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
-  geom_line(data=dat_pred[dat_pred$amplicon >= breakpoint,],
-            aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
-  geom_point(data= break_annot, aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
-  geom_text(data= break_annot, aes(x=amplicon, y=preds, label=paste0(breakpoint, "bp")),nudge_y = 0.1,  color = 'red', inherit.aes = FALSE) +
+  geom_line(data=dat_pred[dat_pred$amplicon >= dat_pred$breakpoint,],
+            aes(x=amplicon, y=preds, linetype=signif_post_slope),  color = 'red', inherit.aes = FALSE) +
+  geom_point(data=break_annot, aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
+  geom_text(data=break_annot, aes(x=amplicon, y=preds,
+                                  label=paste0(breakpoint, "bp p",ifelse(pval < 0.001,"<0.001", ">0.001"))),
+            nudge_y = 0.1,nudge_x = 120,  color = 'red', inherit.aes = FALSE) +
   geom_vline(data=dat_pred, aes(xintercept = breakpoint), colour="black", linetype = "dashed") +
   scale_colour_gradient(low ="firebrick", high ="darkslateblue", na.value = "grey") +
   geom_hline(yintercept=0, colour="grey80")+
@@ -851,8 +881,9 @@ gg.id <- id_success %>%
   facet_grid(threshold~type) +
   theme(legend.position = "none") + 
   labs(x="Amplicon length",
-       y="Percentage identified") +
+       y="Successfully identified") +
   coord_cartesian(ylim=c(0.5,1))+
+  scale_linetype_manual(values=c( "dashed", "solid"))+
   scale_y_continuous(labels = scales::percent) +
   scale_x_continuous(labels=scales::unit_format(unit="bp"))+
   theme(panel.grid.minor = element_blank())
@@ -1080,6 +1111,9 @@ Fig4 <- Fig4a - gg.id
 
 Fig4
 
+pdf(file="fig/Fig4_id_success.pdf", width = 8, height = 11 , paper="a4")
+  plot(Fig4)
+try(dev.off(), silent=TRUE)
 ```
 
 
@@ -1413,10 +1447,10 @@ gg.density <- imputed %>%
   coord_flip()
 
 
-Fig4 <- p3 + gg.mismatch + gg.density + plot_layout(widths = c(1,3,0.25))
+Fig5 <- p3 + gg.mismatch + gg.density + plot_layout(widths = c(1,3,0.25))
 
-pdf(file="fig/Fig4_mismatch.pdf", width = 8, height = 11 , paper="a4")
-  plot(Fig4)
+pdf(file="fig/Fig5_mismatch.pdf", width = 8, height = 11 , paper="a4")
+  plot(Fig5)
 try(dev.off(), silent=TRUE)
  
 #- Add a summary metric for mean mismatch for each primer
